test/parser/exercise/struct_member_access_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): unit {
    let r = s.;
    // CHECK: [[# @LINE -1 ]]:15: error: expected identifier

    let r = s().r...;
    // CHECK: [[# @LINE -1 ]]:19: error: expected identifier

    let r = s().r.x();
    // CHECK: DeclStmt:
    // CHECK-NEXT:   VarDecl: r
    // CHECK-NEXT:     CallExpr:
    // CHECK-NEXT:       MemberExpr:
    // CHECK-NEXT:         MemberExpr:
    // CHECK-NEXT:           CallExpr:
    // CHECK-NEXT:             DeclRefExpr: s
    // CHECK-NEXT:           DeclRefExpr: r
    // CHECK-NEXT:         DeclRefExpr: x

    s.r.x()()();
    // CHECK: CallExpr:
    // CHECK-NEXT:   CallExpr:
    // CHECK-NEXT:     CallExpr:
    // CHECK-NEXT:       MemberExpr:
    // CHECK-NEXT:         MemberExpr:
    // CHECK-NEXT:           DeclRefExpr: s
    // CHECK-NEXT:           DeclRefExpr: r
    // CHECK-NEXT:         DeclRefExpr: x
}
